# cpp-schema

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
compile/: BUILD.bazel
cppschema/apispec/: BUILD.bazel  api_framework.h  api_registry.h
cppschema/backend/: BUILD.bazel  api_backend_bridge.h
cppschema/common/: BUILD.bazel  enum_registry.cc  enum_registry.h  enum_registry_test.cc  strong_types.h  strong_types_test.cc  types.h  visitor_macros.h
cppschema/wasm/: BUILD.bazel  js_api_bridge.h  js_converter.h  js_converter_inl.h
example/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  graph_api.h  graph_backend.cpp  graph_backend_test.cpp  graph_embind.cpp  graph_jslib.test.mjs  graph_jslib_loader.mjs  graph_jslib_runner.mjs  jest.config.mjs
example/compile/: BUILD.bazel
