load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "backend_bridge",
    hdrs = [
        "api_backend_bridge.h",
    ],
    deps = [
        "//cppschema/apispec",
        "//cppschema/common:visitor_macros",
    ],
)
