load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "enum_registry",
    srcs = ["enum_registry.cc"],
    hdrs = ["enum_registry.h"],
    deps = [
        ":visitor_macros",
        "@abseil-cpp//absl/log",
    ],
)

cc_library(
    name = "visitor_macros",
    hdrs = ["visitor_macros.h"],
)

cc_library(
    name = "types",
    hdrs = ["types.h"],
)
